tests/errors/flow/bare-return-non-void.fn
---
Description: Bare return with no value in a function declared to return a value
Expected: FN3301
---

type Program
{
    fn Bad -> i32
    {
        return
    }

    static fn Main -> i32
    {
        return Bad()
    }
}
